Fix footer alignment issues

--- a/apps/gizual-app/src/primitives/footer/footer.module.scss
+++ b/apps/gizual-app/src/primitives/footer/footer.module.scss
@@ -85,6 +85,7 @@
   gap: 0.25rem;
   display: flex;
   flex-direction: row;
+  align-items: center;
 
   > span {
     padding-right: 0.5rem;
